feat: update frontend with compact layout and discount sorting

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   </footer>
 
   <!-- Scripts -->
+  <script src="coupon-data.js"></script>
   <script src="script.js"></script>
   <script>
     document.addEventListener('DOMContentLoaded', function () {
